# micro-sam

./: .gitignore  CLAUDE.md  LICENSE  README.md  RELEASE_OVERVIEW.md  build_doc.py  build_doc.sh  check_embed_widget.py  documentation.md  environment.yaml  environment_cpu.yaml  environment_gpu.yaml  environment_gpu_win.yaml  environment_win.yaml  index.html  micro_sam.html  pyproject.toml  requirements-dev.txt  search.js  setup.cfg  setup.py
.github/: doc_env.yaml  pull_request_template.md  release_config.yaml
deployment/: build_pyinstaller_app.sh  construct.yaml  construct_ubuntu-latest.yaml  construct_windows-latest.yaml  env.yaml  post-install.sh  post_install.bat  version_getter.py  windows_menu.json  windows_menu_setup.py
development/: .gitignore  README.md  annotator_2d_tiled.py  annotator_3d_tiled.py  annotator_tracking_tiled.py  annotators_in_image_series.py  apg_example.py  benchmark.py  check_3d_model.py  check_data_count.py  check_omero_connection.py  instance_segmentation.py  instance_segmentation_3d.py  predict_3d_model_with_lucchi.py  promptable_segmentation.py  seg_with_decoder.py  seg_with_decoder_2d.py  seg_with_decoder_3d.py  series_with_decoder.py  tracking.py  train_3d_model_with_lucchi.py  train_3d_model_with_lucchi_without_decoder.py  train_without_decoder.sh
doc/: annotation_tools.md  apg.md  band.md  cli_tools.md  contributing.md  data_submission.md  development.md  faq.md  finetuned_models.md  installation.md  python_library.md  start_page.md
docs/: micro_sam.html  search.js
examples/: .gitignore  README.md  annotator_2d.py  annotator_3d.py  annotator_tracking.py  annotator_with_custom_model.py  automatic_segmentation.py  automatic_tracking.py  image_series_annotator.py  image_series_annotator_app.py  instance_segmentation.py  object_classifier.py  quick_start.py  sam_annotator_2d.py  sam_annotator_3d.py  sam_annotator_tracking.py  sam_image_series_annotator.py
finetuning/: .gitignore  README.md  livecell_evaluation.py  livecell_example.py  livecell_finetuning.py  livecell_inference.py  run_all_finetuning.py
micro_sam/: __init__.py  __version__.html  __version__.py  _model_settings.html  _model_settings.py  _test_util.html  _test_util.py  _vendored.html  _vendored.py  automatic_segmentation.html  automatic_segmentation.py  bioimageio.html  embedding_instance_segmentation.py  evaluation.html  inference.html  inference.py  instance_segmentation.html  instance_segmentation.py  model_zoo.py  models.html  multi_dimensional_segmentation.html  multi_dimensional_segmentation.py  napari.yaml  object_classification.html  object_classification.py  precompute_state.html  precompute_state.py  predictor_adaptor.py  prompt_based_segmentation.html  prompt_based_segmentation.py  prompt_generators.html  prompt_generators.py  reproducibility.py  sam_3d_wrapper.py  sam_annotator.html  sam_trainer.py  sample_data.html  sample_data.py  segment_from_prompts.py  segment_instances.py  (+6 more)
notebooks/: README.md  automatic-segmentation.ipynb  automatic_segmentation.ipynb  inference_and_evaluation.ipynb  inference_sam.ipynb  micro-sam-autoseg.ipynb  micro-sam-finetuning.ipynb  micro-sam-finetuning.nbconvert.ipynb  quick_start.ipynb  sam_finetuning.ipynb
scripts/: .gitignore  export_models_for_upload.py
test/: test_automatic_segmentation.py  test_cli.py  test_gui.py  test_instance_segmentation.py  test_multi_dimensional_segmentation.py  test_peft_training.py  test_prompt_based_segmentation.py  test_prompt_generators.py  test_segment_from_prompts.py  test_segment_instances.py  test_training.py  (+2 more)
(+619 files in other folders)
