[metadata]
name = micro-sam
version = attr: micro_sam.__version__
description = SegmentAnything For Microscopy
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/computational-cell-analytics/micro-sam
author = Anwai Archit, Paul Hilt, Genevieve Buckley, Constantin Pape
author_email = yourname@example.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/computational-cell-analytics/micro-sam/issues
    Documentation = https://computational-cell-analytics.github.io/micro-sam/micro_sam.html
    Source Code = https://github.com/computational-cell-analytics/micro-sam
    User Support = https://github.com/computational-cell-analytics/micro-sam/issues

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
package_dir =
    = .

[options.packages.find]
where = .

# tell napari where to find to your manifest
[options.entry_points]
napari.manifest =
    micro-sam = micro_sam:napari.yaml
console_scripts =
    micro_sam.annotator_2d = micro_sam.sam_annotator.annotator_2d:main
    micro_sam.annotator_3d = micro_sam.sam_annotator.annotator_3d:main
    micro_sam.annotator_tracking = micro_sam.sam_annotator.annotator_tracking:main
    micro_sam.image_series_annotator = micro_sam.sam_annotator.image_series_annotator:main
    micro_sam.precompute_embeddings = micro_sam.precompute_state:main

# make sure it gets included in your package
[options.package_data]
* = *.yaml
